--- a/index.html
+++ b/index.html
@@ -4,10 +4,32 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;800&family=Poppins:wght@300;700&display=swap"
+			rel="stylesheet"
+		/>
 		<link rel="stylesheet" href="style.css" />
-		<title>Document</title>
+		<title>crushmecrush</title>
 	</head>
 	<body>
+		<div class="container">
+			<h1>Does your crush likes you?</h1>
+			<div class="usersInput">
+				<input type="text" class="userName" placeholder="Enter your name" />
+				<p class="reminder"></p>
+				<input
+					type="text"
+					class="crushName"
+					placeholder="Enter your crush name"
+				/>
+				<p class="reminder"></p>
+				<button class="btnGenerate">Let us know!</button>
+				<p class="crushPercentage"></p>
+			</div>
+		</div>
+
 		<script src="app.js"></script>
 	</body>
 </html>
