--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 				<p class="reminder"></p>
 				<button class="btnGenerate">Let us know!</button>
 				<p class="crushPercentage"></p>
+				<p class="crushMessage"></p>
 			</div>
 		</div>
 
